[gd_scene load_steps=4 format=3 uid="uid://otr10s2mrqg"]

[ext_resource type="Theme" uid="uid://bfpcbgtedt8aw" path="res://addons/rhythm_level_editor/rhythm_editor_theme.tres" id="1_1dnpk"]
[ext_resource type="Script" uid="uid://bo2guqedolrwk" path="res://addons/rhythm_level_editor/scripts/bpm_settings.gd" id="2_d1yat"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1dnpk"]

[node name="BpmSettings" type="PanelContainer" node_paths=PackedStringArray("input", "confirm", "cancel")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_1dnpk")
theme_override_styles/panel = SubResource("StyleBoxFlat_1dnpk")
script = ExtResource("2_d1yat")
input = NodePath("MarginContainer/Vertical/Field/Input")
confirm = NodePath("MarginContainer/Vertical/Confirmation/Confirm")
cancel = NodePath("MarginContainer/Vertical/Confirmation/Cancel")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2

[node name="Vertical" type="BoxContainer" parent="MarginContainer"]
layout_mode = 2
vertical = true

[node name="Spacing2" type="Control" parent="MarginContainer/Vertical"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 15.0

[node name="Field" type="BoxContainer" parent="MarginContainer/Vertical"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/Vertical/Field"]
layout_mode = 2
text = "New BPM Value:"

[node name="Input" type="SpinBox" parent="MarginContainer/Vertical/Field"]
layout_mode = 2
size_flags_horizontal = 3
allow_greater = true

[node name="Spacing" type="Control" parent="MarginContainer/Vertical"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 15.0

[node name="Confirmation" type="BoxContainer" parent="MarginContainer/Vertical"]
layout_mode = 2
size_flags_vertical = 3

[node name="Confirm" type="Button" parent="MarginContainer/Vertical/Confirmation"]
layout_mode = 2
size_flags_horizontal = 3
text = "Confirm"

[node name="Cancel" type="Button" parent="MarginContainer/Vertical/Confirmation"]
layout_mode = 2
size_flags_horizontal = 3
text = "Cancel"

[connection signal="value_changed" from="MarginContainer/Vertical/Field/Input" to="." method="_on_input_value_changed"]
[connection signal="pressed" from="MarginContainer/Vertical/Confirmation/Confirm" to="." method="_on_confirm_pressed"]
[connection signal="pressed" from="MarginContainer/Vertical/Confirmation/Cancel" to="." method="_on_cancel_pressed"]
